--- a/index.html
+++ b/index.html
@@ -35,6 +35,38 @@
                     </a>
                 </div>
             </div>
+            <!-- Botón hamburguesa (solo visible en mobile) -->
+            <button class="hamburger" id="hamburgerBtn" aria-label="Abrir menú">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <!-- Menú móvil lateral -->
+            <nav class="mobile-menu" id="mobileMenu">
+                <button class="close-btn" id="closeMobileMenu" aria-label="Cerrar menú">
+                    <i class="fas fa-times"></i>
+                </button>
+                <a href="#inicio" class="menu-btn" data-section="inicio">Inicio</a>
+                <a href="html/autoridades.html" class="menu-btn" data-section="autoridades">Autoridades</a>
+                <a href="html/especialidades.html" class="menu-btn" data-section="especialidades">Especialidades</a>
+                <a href="html/inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">Inscripciones 2026</a>
+                <div class="mobile-social">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </nav>
+            <!-- Overlay para cerrar menú -->
+            <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
 
             <!-- Menú principal -->
             <nav class="main-menu">
@@ -140,7 +172,7 @@
                 </div>
             </div>
             <!-- Flecha para siguiente sección -->
-            <div class="scroll-arrow" id="scrollArrow">
+            <div class="scroll-arrow" id="scrollArrow4">
                 <i class="fas fa-chevron-down"></i>
             </div>
         </section>
