--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscripciones - Técnica N° 1 de Vicente López</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/inscripciones.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="../img/logo.ico">
 </head>
 <body>
     <header class="navbar">
         <div class="navbar-container">
             <!-- Logo con dropdown de redes sociales -->
             <div class="logo-container">
-                <img src="../IMG/logo.png" alt="Logo Técnica N°1" class="logo" id="logoBtn">
+                <img src="../img/logo.webp" alt="Logo Técnica N°1" class="logo" id="logoBtn">
                 <div class="social-dropdown" id="socialDropdown">
                     <a href="#" class="social-link">
                         <i class="fab fa-facebook-f"></i>
@@ -52,6 +56,26 @@
     </header>
 
     <main>
+        <div class="inscription-container container-xxl">
+            <div class="row h-100">
+                <div id="main-content" class="col-7 d-flex align-items-center justify-content-evenly flex-lg-column">
+                    <h2 class="text-center text-white">Inscripciones 2025</h2>
+                    <div>
+                        <p class="text-white">¿Te gusta resolver problemas y crear soluciones innovadoras? En nuestra escuela, contamos con los recursos necesarios para que puedas expresar tu creatividad. Tendrás acceso a computadoras, netbooks y herramientas de trabajo. Desde el primer día, estarás trabajando en proyectos, desde la creación de un horno solar, un semáforo con leds y de forma más avanzada la producción de circuitos electrónicos simples hasta aplicaciones web complejas. Esta experiencia te permitirá desarrollar habilidades clave como el pensamiento crítico, la resolución de problemas y el trabajo en equipo, preparándote para los desafíos del mundo profesional.</p>
+                    </div>
+                    <span id="school-email" class="text-center rounded w-100">Consultas solo por mail: inscripcion@tecnica1vl.org</span>
+                </div>
+                <div class="container col-5 d-flex align-items-center justify-content-center h-100">
+                    <div class="container-option-buttons rounded d-flex align-items-center justify-content-evenly flex-lg-column">
+                        <span class="text-center">Información clave</span>
+                        <button class="btn btn-primary">¿Por qué inscribirse?</button>
+                        <button class="btn btn-primary">¿Qué traer?</button>
+                        <button class="btn btn-primary">¿Cuándo abren?</button>
+                        <button class="btn btn-primary">Materias C.B.</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="../scripts/navbar.js"></script>
