Correciones de la combinacion con el responsive de inscripciones

--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -13,30 +13,79 @@
 </head>
 <body>
     <header class="navbar">
-    <div class="navbar-container">
-        <!-- Logo con dropdown de redes sociales -->
-        <div class="logo-container">
-            <img src="../img/logo.webp" alt="Logo Técnica N°1" class="logo" id="logoBtn">
-            <div class="social-dropdown" id="socialDropdown">
-                <a href="#" class="social-link">
-                    <i class="fab fa-facebook-f"></i>
-                    <span>Facebook</span>
-                </a>
-                <a href="#" class="social-link">
-                    <i class="fab fa-instagram"></i>
-                    <span>Instagram</span>
-                </a>
-                <a href="#" class="social-link">
-                    <i class="fab fa-twitter"></i>
-                    <span>Twitter</span>
-                </a>
-                <a href="#" class="social-link">
-                    <i class="fab fa-youtube"></i>
-                    <span>YouTube</span>
-                </a>
+        <div class="navbar-container">
+            <!-- Logo con dropdown de redes sociales -->
+            <div class="logo-container">
+                <img src="../img/logo.webp" alt="Logo Técnica N°1" class="logo" id="logoBtn">
+                <div class="social-dropdown" id="socialDropdown">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-facebook-f"></i>
+                        <span>Facebook</span>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                        <span>Twitter</span>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-youtube"></i>
+                        <span>YouTube</span>
+                    </a>
+                </div>
             </div>
-        </div>
+            <!-- Botón hamburguesa (solo visible en mobile) -->
+            <button class="hamburger" id="hamburgerBtn" aria-label="Abrir menú">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <!-- Menú móvil lateral -->
+            <nav class="mobile-menu" id="mobileMenu">
+                <button class="close-btn" id="closeMobileMenu" aria-label="Cerrar menú">
+                    <i class="fas fa-times"></i>
+                </button>
+                <a href="#inicio" class="menu-btn" data-section="inicio">Inicio</a>
+                <a href="html/autoridades.html" class="menu-btn" data-section="autoridades">Autoridades</a>
+                <a href="html/especialidades.html" class="menu-btn" data-section="especialidades">Especialidades</a>
+                <a href="html/inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">Inscripciones 2026</a>
+                <div class="mobile-social">
+                    <a href="#" class="social-link">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="social-link">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </nav>
+            <!-- Overlay para cerrar menú -->
+            <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
 
+            <!-- Menú principal -->
+            <nav class="main-menu">
+                <a href="#inicio" class="menu-btn" data-section="inicio">
+                    <span>Inicio</span>
+                </a>
+                <a href="html/autoridades.html" class="menu-btn" data-section="autoridades">
+                    <span>Autoridades</span>
+                </a>
+                <a href="html/especialidades.html" class="menu-btn" data-section="especialidades">
+                    <span>Especialidades</span>
+                </a>
+                <a href="html/inscripciones.html" class="menu-btn inscripciones-btn" data-section="inscripciones">
+                    <span>Inscripciones 2026</span>
+                </a>
+            </nav>
+        </div>
+    </header>
     <main>
         <div class="inscription-container container-xxl">
             <div class="row h-100">
@@ -48,9 +97,9 @@
                         </div>
                     </div>
                     <!-- Qué traer -->
-                     <div class="data-container d-none align-items-center justify-content-start flex-lg-column">
+                     <div id="neccesary_things_container" class="data-container d-none justify-content-start flex-lg-column">
                          <h2 class="data_header">¿Qué traer?</h2>
-                         <ul>
+                         <ul id="neccesary_things" class="h-100 d-flex justify-content-between flex-lg-column">
                             <li>Constancia de 6to grado aprobado (que diga sin adeudar materias).</li>
                             <li>Fotocopia de partida de nacimiento y de las vacunas aplicadas al alumno.</li>
                             <li>Original y fotocopias del D.N.I. del alumno y de cada uno de los padres.</li>
