Inscripciones Responsive(avisen si quieren cambiar algo mas)

--- a/html/inscripciones.html
+++ b/html/inscripciones.html
@@ -87,119 +87,89 @@
         </div>
     </header>
     <main>
-        <div class="inscription-container container-xxl">
-            <div class="row h-100">
-                <div id="main-content" class="col-7 d-flex align-items-center justify-content-evenly flex-lg-column">
-                    <div class="data-container d-none align-items-center justify-content-start flex-lg-column">
-                        <h2 class="data_header">Inscripciones 2025</h2>
-                        <div>
-                            <p class="text-white">¿Te gusta resolver problemas y crear soluciones innovadoras? En nuestra escuela, contamos con los recursos necesarios para que puedas expresar tu creatividad. Tendrás acceso a computadoras, netbooks y herramientas de trabajo. Desde el primer día, estarás trabajando en proyectos, desde la creación de un horno solar, un semáforo con leds y de forma más avanzada la producción de circuitos electrónicos simples hasta aplicaciones web complejas. Esta experiencia te permitirá desarrollar habilidades clave como el pensamiento crítico, la resolución de problemas y el trabajo en equipo, preparándote para los desafíos del mundo profesional.</p>
+        <div class="inscription-container container-fluid">
+            <div class="row h-100 gx-0">
+                <div id="main-content" class="col-12 col-lg-7 d-flex align-items-center justify-content-center">
+                    <div class="content-wrapper w-100">
+                        <!-- Sección: ¿Por qué inscribirse? -->
+                        <div class="data-container d-flex align-items-center justify-content-start flex-column">
+                            <h2 class="data_header">Inscripciones 2025</h2>
+                            <div class="content-text">
+                                <p class="text-white">¿Te gusta resolver problemas y crear soluciones innovadoras? En nuestra escuela, contamos con los recursos necesarios para que puedas expresar tu creatividad. Tendrás acceso a computadoras, netbooks y herramientas de trabajo. Desde el primer día, estarás trabajando en proyectos, desde la creación de un horno solar, un semáforo con leds y de forma más avanzada la producción de circuitos electrónicos simples hasta aplicaciones web complejas. Esta experiencia te permitirá desarrollar habilidades clave como el pensamiento crítico, la resolución de problemas y el trabajo en equipo, preparándote para los desafíos del mundo profesional.</p>
+                            </div>
                         </div>
+
+                        <!-- Sección: ¿Qué traer? -->
+                        <div id="neccesary_things_container" class="data-container d-none justify-content-start flex-column">
+                            <h2 class="data_header">¿Qué traer?</h2>
+                            <ul id="neccesary_things" class="requirements-list">
+                                <li>Constancia de 6to grado aprobado (que diga sin adeudar materias).</li>
+                                <li>Fotocopia de partida de nacimiento y de las vacunas aplicadas al alumno.</li>
+                                <li>Original y fotocopias del D.N.I. del alumno y de cada uno de los padres.</li>
+                                <li>Fotocopias del D.N.I. de personas autorizadas a retirar al alumno.</li>
+                                <li>2 fotos 4x4.</li>
+                                <li>Solicitud de inscripción con información de salud y Autorización de uso de imagen y personas autorizadas a retirar.</li>
+                                <li>1 Legajo. Se compra en la escuela, lo vende cooperadora en la fecha de inscripción.</li>
+                            </ul>
+                        </div>
+
+                        <!-- Sección: Materias -->
+                        <div class="data-container d-none align-items-center justify-content-between flex-column">
+                            <h2 class="data_header">Materias ciclo básico</h2>
+                            <div class="container-fluid d-flex justify-content-between subjects-buttons-container">
+                                <button class="button_subjects btn btn-primary active" data-grade="1">Primer año</button>
+                                <button class="button_subjects btn btn-primary" data-grade="2">Segundo año</button>
+                                <button class="button_subjects btn btn-primary" data-grade="3">Tercer año</button>
+                            </div>
+                            <div class="grade_subject row w-100">
+                                <div class="col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Lenguajes Tecnológicos</li>
+                                        <li>Procedimientos Técnicos</li>
+                                        <li>Sistemas Tecnológicos</li>
+                                        <li>Ciencias Naturales</li>
+                                        <li>Ciencias Sociales</li>
+                                        <li>Construcción Ciudadanía</li>
+                                    </ul>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <ul class="subjects-list">
+                                        <li>Educación Artística</li>
+                                        <li>Educación Física</li>
+                                        <li>Inglés</li>
+                                        <li>Matemática</li>
+                                        <li>Prácticas del lenguaje</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Sección: ¿Cuándo abren? -->
+                        <div class="data-container d-none align-items-center justify-content-between flex-column">
+                            <h2 class="data_header">¿Cuándo se abren las inscripciones?</h2>
+                            <div class="content-text">
+                                <p>Las inscripciones se abren en el mes de Diciembre. Para inscribirse, es necesario llevar todo lo indicado en la sección. Qué traer. <br>Además, en el mes de Noviembre se realiza la ExpoTécnica, una muestra de proyectos realizados durante el año. Es una excelente oportunidad para conocer el trabajo de nuestros estudiantes y vivir la experiencia técnica desde dentro.</p>
+                            </div>
+                            <div class="video-container">
+                                <iframe class="responsive-video" src="https://www.youtube.com/embed/L5iSNGRq_KE?si=sEWZxuuVfOtQzNWH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
+                        </div>
+
+                        <span id="school-email" class="text-center rounded w-100 d-block">Consultas solo por mail: inscripcion@tecnica1vl.org</span>
                     </div>
-                    <!-- Qué traer -->
-                     <div id="neccesary_things_container" class="data-container d-none justify-content-start flex-lg-column">
-                         <h2 class="data_header">¿Qué traer?</h2>
-                         <ul id="neccesary_things" class="h-100 d-flex justify-content-between flex-lg-column">
-                            <li>Constancia de 6to grado aprobado (que diga sin adeudar materias).</li>
-                            <li>Fotocopia de partida de nacimiento y de las vacunas aplicadas al alumno.</li>
-                            <li>Original y fotocopias del D.N.I. del alumno y de cada uno de los padres.</li>
-                            <li>Fotocopias del D.N.I. de personas autorizadas a retirar al alumno.</li>
-                            <li>2 fotos 4x4.</li>
-                            <li>Solicitud de inscripción con información de salud y Autorización de uso de imagen y personas autorizadas a retirar.</li>
-                            <li>1 Legajo. Se compra en la escuela, lo vende cooperadora en la fecha de inscripción.</li>
-                         </ul>
-                     </div>
-                     <div class="data-container d-flex align-items-center justify-content-between flex-lg-column">
-                        <h2 class="data_header">Materias ciclo básico</h2>
-                        <div class="container-fluid d-flex justify-content-between">
-                            <button class="button_subjects btn btn-primary">Primer año</button>
-                            <button class="button_subjects btn btn-primary">Segundo año</button>
-                            <button class="button_subjects btn btn-primary">Tercer año</button>
-                        </div>
-                        <div class="d-flex grade_subject row">
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Lenguajes Tecnológicos</li>
-                                    <li>Procedimientos Técnicos</li>
-                                    <li>Sistemas Tecnológicos</li>
-                                    <li>Ciencias Naturales</li>
-                                    <li>Ciencias Sociales</li>
-                                    <li>Construcción Ciudadanía</li>
-                                </ul>
-                            </div>
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Educación Artística</li>
-                                    <li>Educación Física</li>
-                                    <li>Inglés</li>
-                                    <li>Matemática</li>
-                                    <li>Prácticas del lenguaje</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="d-none grade_subject row">
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Lenguajes Tecnológicos</li>
-                                    <li>Procedimientos Técnicos</li>
-                                    <li>Sistemas Tecnológicos</li>
-                                    <li>Ciencias Naturales</li>
-                                    <li>Ciencias Sociales</li>
-                                    <li>Construcción Ciudadanía</li>
-                                </ul>
-                            </div>
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Educación Artística</li>
-                                    <li>Educación Física</li>
-                                    <li>Inglés</li>
-                                    <li>Matemática</li>
-                                    <li>Prácticas del lenguaje</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="d-none grade_subject row">
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Lenguajes Tecnológicos</li>
-                                    <li>Procedimientos Técnicos</li>
-                                    <li>Sistemas Tecnológicos</li>
-                                    <li>Ciencias Naturales</li>
-                                    <li>Ciencias Sociales</li>
-                                    <li>Construcción Ciudadanía</li>
-                                </ul>
-                            </div>
-                            <div class="col-6">
-                                <ul class="subjects-list">
-                                    <li>Educación Artística</li>
-                                    <li>Educación Física</li>
-                                    <li>Inglés</li>
-                                    <li>Matemática</li>
-                                    <li>Prácticas del lenguaje</li>
-                                </ul>
-                            </div>
-                        </div>
-                     </div>
-                     <div class="data-container d-none align-items-center justify-content-between flex-lg-column">
-                        <h2 class="data_header">¿Cuándo se abren las inscripciones?</h2>
-                        <p>Las inscripciones se abren en el mes de Diciembre. Para inscribirse, es necesario llevar todo lo indicado en la sección. Qué traer. <br>Además, en el mes de Noviembre se realiza la ExpoTécnica, una muestra de proyectos realizados durante el año. Es una excelente oportunidad para conocer el trabajo de nuestros estudiantes y vivir la experiencia técnica desde dentro.</p>
-                        <iframe class="h-50" width="560" height="315" src="https://www.youtube.com/embed/L5iSNGRq_KE?si=sEWZxuuVfOtQzNWH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                     </div>
-                    <span id="school-email" class="text-center rounded w-100">Consultas solo por mail: inscripcion@tecnica1vl.org</span>
                 </div>
                 <div class="col-12 col-lg-5 buttons-col">
                     <div class="container-option-buttons rounded">
                         <span class="text-center">Información clave</span>
-                        <button id="why_button" class="btn btn-primary">¿Por qué inscribirse?</button>
-                        <button id="things_button" class="btn btn-primary">¿Qué traer?</button>
-                        <button id="when_button" class="btn btn-primary">¿Cuándo abren?</button>
-                        <button id="subjects_button" class="btn btn-primary">Materias C.B.</button>
+                        <button id="why_button" class="btn btn-primary option-btn active">¿Por qué inscribirse?</button>
+                        <button id="things_button" class="btn btn-primary option-btn">¿Qué traer?</button>
+                        <button id="when_button" class="btn btn-primary option-btn">¿Cuándo abren?</button>
+                        <button id="subjects_button" class="btn btn-primary option-btn">Materias C.B.</button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
 
     <script src="../scripts/navbar.js"></script>
     <script src="../scripts/inscripciones.js"></script>
